<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_watermark_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_grey" >
    <RelativeLayout
        android:id="@+id/layout_watermark_top"
		style="@style/layout_top_title">

        <Button
            android:id="@+id/btn_watermark_cancel"
            style="@style/btn_left_top_back" />

        <TextView
            style="@style/text_top_title"
            android:text="@string/watermark_title" />

        <Button
            android:id="@+id/btn_watermark_ok"
			style="@style/btn_right_top"
            android:text="@string/finish" />

        <Button
            android:id="@+id/btn_watermark_title_close"
            android:layout_width="@dimen/btn_width_top"
            android:layout_height="@dimen/btn_height_top"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/btn_margin_right_second"
            android:background="@drawable/bg_btn_red"
            android:text="@string/watermark_close"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_textsize_top_title"
            android:layout_toLeftOf="@id/btn_watermark_ok"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_watermark_changebg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/layout_watermark_top"
        android:background="@android:color/transparent"
        android:clickable="true" >

        <TextView
            android:id="@+id/text_watermark_changetip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/watermark_change_tip"
            android:textSize="13sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_watermark_operas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_translation_light"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingBottom="20dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_watermark_orientation"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/btn_watermark_bottom_height"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_blue"
                android:text="@string/watermark_orientation_landscape"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_watermark_cut"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/btn_watermark_bottom_height"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_blue"
                android:text="@string/watermark_cut"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_watermark_change"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/btn_watermark_bottom_height"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_blue"
                android:text="@string/watermark_change"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_watermark_delete"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/btn_watermark_bottom_height"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_red"
                android:text="@string/watermark_del"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_watermark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/watermark_text"
                android:textSize="15sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekbar_watermark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:progressDrawable="@drawable/seekbar_define_style"
                android:thumb="@drawable/seekbar_thumb"
                android:thumbOffset="0dip" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_watermark"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY" />

</RelativeLayout>