<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_busymodeset_title"
		style="@style/layout_top_title">

        <Button
            android:id="@+id/btn_busymodeset_back"
            style="@style/btn_left_top_back" />

        <TextView
            style="@style/text_top_title"
            android:text="@string/busymode_set_title" />

        <Button
            android:id="@+id/btn_busymodeset_ok"
			style="@style/btn_right_top"
            android:text="@string/str_open" />

        <Button
            android:id="@+id/btn_busymode_title_close"
            android:layout_width="@dimen/btn_width_top"
            android:layout_height="@dimen/btn_height_top"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/btn_margin_right_second"
            android:background="@drawable/bg_btn_red"
            android:text="@string/watermark_close"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_textsize_top_title"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/layout_busymodeset_title"
        android:layout_marginBottom="40dip"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_busymode_msgcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="4"
            android:background="@drawable/edit_bg"
            android:gravity="top"
            android:hint="@string/busymode_set_hint"
            android:textSize="16sp" />

        <com.zgy.ringforu.view.WordsFlowView
            android:id="@+id/busymode_flow"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
        </com.zgy.ringforu.view.WordsFlowView>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dip"
        android:gravity="center_horizontal"
        android:text="@string/busymode_rule_tip"
        android:textColor="@color/black" />

</RelativeLayout>