<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_light"
    android:orientation="vertical" >

    <!-- 动态显示界面 -->

    <LinearLayout
        android:id="@+id/tab_layout_topbody"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>
    <!-- 底部功能菜单栏 -->

    <LinearLayout
        android:id="@+id/tab_layout_bottombody"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="9"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/tab_important"
            style="@style/layout_tab_bottom" >

            <ImageView
                android:id="@+id/img_tab_important"
                style="@style/img_tab_bottom" />

            <TextView
                style="@style/text_tab_bottom"
                android:text="@string/tab_important" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_call"
            style="@style/layout_tab_bottom" >

            <ImageView
                android:id="@+id/img_tab_call"
                style="@style/img_tab_bottom" />

            <TextView
                style="@style/text_tab_bottom"
                android:text="@string/tab_call" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_sms"
            style="@style/layout_tab_bottom" >

            <ImageView
                android:id="@+id/img_tab_sms"
                style="@style/img_tab_bottom" />

            <TextView
                style="@style/text_tab_bottom"
                android:text="@string/tab_sms" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_more"
            style="@style/layout_tab_bottom" >

            <ImageView
                android:id="@+id/img_tab_more"
                style="@style/img_tab_bottom" />

            <TextView
                style="@style/text_tab_bottom"
                android:text="@string/tab_more" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>